Fix sponsor logos overflow on smaller displays

--- a/src/pages/sponsors.module.scss
+++ b/src/pages/sponsors.module.scss
@@ -15,6 +15,10 @@
   background: white;
 }
 
+.sponsorLogoImage {
+  max-width: 100%;
+}
+
 .sponsorName {
   text-align: center;
 }
